# atlas

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
frontend/: app.py  chainlit.md
frontend/.chainlit/: config.toml
frontend/public/: custom.js  stylesheet.css
src/agents/: README.md  atlas_agent.py  cli.py  vanilla_agent.py
src/agents/instructions/: atlas.txt  chat_summary.txt  checkpoint_system.txt  checkpoint_user.txt  learner.txt  vanilla.txt
src/agents/learner_agent/: __init__.py  base.py  ollama_agent.py  sk_agent.py
src/education_data/: README.md  cli.py  prompts.py  workflows.py
src/education_data/course/: data.py  exam.py  roadmap.py  search_index.py  syllabus.py
src/education_data/learner/: concept_profile.py  data.py
src/education_data/memory/: checkpoint.py  progress.py
src/evaluation/: README.md  cli.py  exam.py  runner.py  simulation.py  stats.py
src/evaluation/chat_sessions/: learner_1_atlas_sim.json  learner_1_vanilla_sim.json  learner_2_atlas_sim.json  learner_2_vanilla_sim.json  learner_3_atlas_sim.json  (+13 more)
src/model_context_protocol/: functions.py  server.py
src/models/: base.py
src/sandbox/: README.md  summary_manager.py
src/utils/: azure_storage_utils.py  chat_completion.py  clients.py  get_env_var.py  llms.py  logger_config.py
tests/: conftest.py
tests/test_education_data/: test_concept_profile.py  test_exam.py  test_memory.py  test_roadmap.py  test_search_index.py  test_syllabus.py  test_workflows.py
tests/test_utils/: test_azure_storage_utils.py
(+491 files in other folders)
